--- a/code/start/package.json
+++ b/code/start/package.json
@@ -1,23 +1,39 @@
 {
-  "name": "auth",
+  "name": "secure-api-assignment",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Secure API Endpoint assignment - Express + TypeScript + JWT + RBAC + Winston",
+  "main": "dist/server.js",
   "scripts": {
-      "start": "ts-node src/index.ts",
-      "dev": "nodemon src/index.ts",
-      "build": "tsc"
-    },
-  "keywords": [],
+    "build": "tsc -p .",
+    "start": "node dist/server.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "lint": "eslint . --ext .ts",
+    "prepare": "npm run build"
+  },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "express": "^5.1.0"
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
+    "express-validator": "^6.14.3",
+    "helmet": "^6.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
-    "@types/express": "^5.0.1",
-    "@types/node": "^22.14.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.17",
+    "@types/express-rate-limit": "^5.1.3",
+    "@types/express-validator": "^3.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^20.5.6",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.6.2"
   }
 }
